--- a/webui/src/App.scss
+++ b/webui/src/App.scss
@@ -120,6 +120,9 @@ img {
   &.expand {
     padding: 100px;
   }
+  &.vh-100 {
+    height: 100vh;
+  }
   .cell {
     padding: 0;
     display: flex;
